# injective-ai-portfolio-agent

./: .env.example  .gitignore  BUIDL_SUBMISSION.md  DEMO_SCRIPT.md  DEPLOY_CONTRACT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SOCIAL_MEDIA_LAUNCH.md  SUBMISSION_GUIDE.md  WINNING_STRATEGY.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: build-and-deploy.yml  build-contract.yml  ci.yml  deploy-contract.yml
contract/: Cargo.toml  README.md  deploy.js
contract/src/: lib.rs  main.rs
odra-project/: Cargo.toml  Odra.toml  README.md  build.rs
odra-project/src/: lib.rs  main.rs
scripts/: README.md  deploy-local.mjs  read-package-hash.mjs
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/api/analyze/: route.ts
src/app/api/chat/: route.ts
src/components/: AIAnalysis.tsx  AgentChat.tsx  ErrorState.tsx  LoadingState.tsx  Logo.tsx  PortfolioDisplay.tsx  WalletConnect.tsx
src/lib/: agent-chat.ts  ai.ts  casper-agent.ts  casper.ts  injective.ts  store.ts  x402.ts
