[package]
name = "portfolio-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Odra 1.5.x (no casper feature flag needed; it does not exist)
odra = { version = "1.5.1" }
odra-casper-livenet-env = "1.5.1"

[features]
default = []

[[bin]]
name = "portfolio_agent_contract"
path = "src/main.rs"
test = false

[lib]
name = "portfolio_agent"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
