[package]
name = "portfolio-agent-odra"
version = "0.1.0"
edition = "2021"
authors = ["Casper AI Portfolio Agent"]
description = "Agentic AI portfolio analysis on Casper Network"

[dependencies]
odra = "2.7.2"

[features]
default = []

[[bin]]
name = "portfolio_agent_contract"
path = "src/main.rs"
test = false

[lib]
name = "portfolio_agent"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(odra_module)"] }

